--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -323,7 +323,7 @@
 		
 		Initial State: The application is running and a private workout routine is created.
 		
-		Input: An edit or addition to a workout routine to make is public.
+		Input: An edit or addition to a workout routine to make it public.
 		
 		Output: The workout routine is declared public in the database and is now visible to all users.
 		
