--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -391,7 +391,7 @@
 		
 		Output: Public workout routines that match the search criteria should be displayed. 
 		
-		Test Case Derivation: All workout routine that follow match a search, should be display.
+		Test Case Derivation: All workout routines that match a search, should be displayed.
 		
 		How test will be performed: By first adding multiple public test routines, then preforming a search, the routines that match the search criteria should be displayed.
 		
