Doc/vnv/system test (#64)
* added functional requirement testing for R1 to R5

* add functional requirement testing for R6 to R11

* removed template

* Update docs/VnVPlan/VnVPlan.tex

Co-authored-by: JaredB <bentvelj@mcmaster.ca>

* Update docs/VnVPlan/VnVPlan.tex

Co-authored-by: JaredB <bentvelj@mcmaster.ca>

* Update docs/VnVPlan/VnVPlan.tex

Co-authored-by: JaredB <bentvelj@mcmaster.ca>

* Update docs/VnVPlan/VnVPlan.tex

Co-authored-by: JaredB <bentvelj@mcmaster.ca>

* added titles to system tests fr

Co-authored-by: JaredB <bentvelj@mcmaster.ca>

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -178,44 +178,311 @@
 	\wss{Include a blurb here to explain why the subsections below
 		cover the requirements.  References to the SRS would be good here.}
 	
-	\subsubsection{Area of Testing1}
+	\subsubsection{Workout Routine Tests}
 	
 	\wss{It would be nice to have a blurb here to explain why the subsections below
 		cover the requirements.  References to the SRS would be good here.  If a section
 		covers tests for input constraints, you should reference the data constraints
 		table in the SRS.}
 	
-	\paragraph{Title for Test}
-	
+	\paragraph{A Workout Routine can be Created}
 	\begin{enumerate}
 		
-		\item{test-id1\\}
+		\item{\textbf{test-WR-1}}
 		
-		Control: Manual versus Automatic
+		Control: Manual
 		
-		Initial State: 
+		Initial State: Application is running.
 		
-		Input: 
+		Input: User inputs required data for a workout routine.
 		
-		Output: \wss{The expected result for the given inputs}
+		Output: A workout routine is stored in the database and is accessible to the user that created it. If the user determined that the workout to be public then it should be publicly visible.
 		
-		Test Case Derivation: \wss{Justify the expected value given in the Output field}
+		Test Case Derivation: On a successful creation, the workout routine should be placed into the database.
 		
-		How test will be performed: 
+		How test will be performed: This test can be preformed with a manual insertion of creating a workout routine under a test user. These results can be determined by viewing the database and scope of visibility of the created routine.
 		
-		\item{test-id2\\}
+		Requirement(s): R1
 		
-		Control: Manual versus Automatic
+		\paragraph{Editing a Workout Routine}
+		\item{\textbf{test-WR-2}}
 		
-		Initial State: 
+		Control: Manual
 		
-		Input: 
+		Initial State: Application is running with an existing workout routine.
 		
-		Output: \wss{The expected result for the given inputs}
+		Input: User edits a workout routine with new values.
 		
-		Test Case Derivation: \wss{Justify the expected value given in the Output field}
+		Output: A workout routine is updated with new values in the database and new values are visible to accessible users.
 		
-		How test will be performed: 
+		Test Case Derivation: On a successful edit, the workout routine should be updated with new values database.
+		
+		How test will be performed: This test can be preformed with a manual edit of a workout routine under a test user.
+		
+		Requirement(s): R1
+		
+		\subsubsection{Exercise Tests}
+		\paragraph{Adding an Exercise to a Workout Routine}
+		\item{\textbf{test-EX-1}}
+
+		Control: Manual
+		
+		Initial State: Application is running and a workout routine is in the process of being created or edited.
+		
+		Input: A user created exercise with the parameters required for the exercise.
+		
+		Output: The workout routine should include the added exercise.
+		
+		Test Case Derivation: Because exercises are bounded to a specific workout routine, the routine that the exercise was created under should include the new exercise.
+		
+		How test will be performed: Given a workout routine, an exercise will be manually added to determine if it is linked and added to the workout routine.
+		
+		Requirement(s): R2
+		
+		\paragraph{Removing an Exercise from a Workout Routine}
+		\item{\textbf{test-EX-2}}
+		
+		Control: Manual
+		
+		Initial State: Application is running and a workout routine is in the process of being created or edited.
+		
+		Input: The user chooses to remove an exercise.
+		
+		Output: Some feedback indicating that an exercise has been removed. The workout routine no longer contains the removed exercise.
+		
+		Test Case Derivation: On removal of an exercise, there should be an indication towards the user notifying them of the removal. The exercise should also be deleted from the workout routine.
+		
+		How test will be performed: Given a workout routine, an exercise will be manually removed and checked to ensure that it no longer exists within the given workout routine.
+		
+		Requirement(s): R2
+		
+		\paragraph{Limiting Exercises to a Workout Routine}
+		\item{\textbf{test-EX-3}}
+		
+		Control: Manual
+		
+		Initial State: Application is running and a workout routine is in the process of being created or edited.
+		
+		Input: The number of exercises required to reach the limit of exercises per workout routine. 
+		
+		Output: A notification to the user, before the limiting exercise notifying them of the limit, and preventing them from adding another exercise.
+		
+		Test Case Derivation: The user should be aware of the exercise limit per workout routine and should not be able to exceed it.
+		
+		How test will be performed: The test will be preformed by manually added exercises to a workout routine until the limit. Then upon adding the limiting input, a notification is expected.
+		
+		Requirement(s): R2
+		
+		\subsubsection{Quantifier Tests}
+		\paragraph{Adding Quantifiers to an Exercise}
+		\item{\textbf{test-QT-1}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and an exercise is in the process of being created or edited.
+		
+		Input: A number and unit of measurement describing an exercise.
+		
+		Output: The exercise now holds the given quantifier and is displayed to the user.
+		
+		Test Case Derivation: On adding a quantifier to an exercise, there should be a unit of measurement and value associated with it.
+		
+		How test will be performed: This test will be executed by adding a quantifier to various types of exercises to ensure they correctly measure the exercise.
+		
+		Requirement(s): R3
+		
+		\paragraph{Removing Quantifiers from an Exercise}
+		\item{\textbf{test-QT-2}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and an exercise is in the process of being created or edited.
+		
+		Input: Removal of a quantifier.
+		
+		Output: The exercise no longer holds a quantifier and is not displayed to the user.
+		
+		Test Case Derivation: On removing a quantifier to an exercise, it should no longer be visible to the user.
+		
+		How test will be performed: This test will be executed by removing a quantifier from an exercises to ensure it does not display any quantifying information.
+		
+		Requirement(s): R3
+		
+		\paragraph{Editing Quantifiers of an Exercise}
+		\item{\textbf{test-QT-3}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and an exercise is in the process of being created or edited.
+		
+		Input: A number and unit of measurement describing an exercise.
+		
+		Output: The exercise now holds the updated quantifier.
+		
+		Test Case Derivation: On updating a quantifier to an exercise, there should be a new unit of measurement and/or value associated with it.
+		
+		How test will be performed: This test will be executed by editing a quantifier and ensuring the values are updated on completion of the edit.
+		
+		Requirement(s): R3
+		
+		\subsubsection{Publicity Tests}
+		\paragraph{Publicizing a Workout Routine}
+		\item{\textbf{test-PB-1}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and a private workout routine is created.
+		
+		Input: An edit or addition to a workout routine to make it public.
+		
+		Output: The workout routine is declared public in the database and is now visible to all users.
+		
+		Test Case Derivation: This is the expected output because if the workout routine was not public before this action then it should not be visible to users. Once updating the publicity, the database should be updated and the routine should be publicly available 
+		
+		How test will be performed: This test will be done by manually changing the state of a workout routine and checking for a database update and viewing the routine under a different test-user.
+		
+		Requirement(s): R4
+		
+		\paragraph{Privatizing a Workout Routine}
+		\item{\textbf{test-PB-2}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and a public workout routine is created.
+		
+		Input: An edit or addition to a workout routine to make is private.
+		
+		Output: The workout routine is declared private in the database and is no longer visible to any user except the creator.
+		
+		Test Case Derivation: By privatizing a routine, it should no longer be accessible to any other user than the creator. There should also be a database update to signify this.
+		
+		How test will be performed: This test will be done by manually changing the state of a workout routine and checking for a database update and viewing the routine under a different test-user.
+		
+		Requirement(s): R4
+		
+		\subsubsection{Workout Routine Saving Tests}
+		\paragraph{Saving a Public Workout Routine}
+		\item{\textbf{test-WS-1}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and there is a public workout routine created by another user.
+		
+		Input: The other user workout routine is saved.
+		
+		Output: The workout routine is now visible and accessible under the saved workout routines.
+		
+		Test Case Derivation: On saving a workout routine, it should be stored somewhere the user can access it for later use.
+		
+		How test will be performed: This test will be done by creating a public workout routine on one test-user. On a different test user this routine will be saved. The saved workout routines should then include the newly saved one.
+		
+		Requirement(s): R5
+		
+		\subsubsection{Browsing Workout Routine Tests}
+		\paragraph{Browsing Workout Routines}
+		\item{\textbf{test-BS-1}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and multiple workout routines are created.
+		
+		Input: navigation movements to view the public workout routines.
+		
+		Output: Multiple public workout routines should be displayed. 
+		
+		Test Case Derivation: On making a routine public, it should be available to all users and also the browsing page.
+		
+		How test will be performed: By first adding multiple public test routines, then checking the public workout routines by browsing. There should exist routines to access and view.
+		
+		Requirement(s): R6
+		
+		\paragraph{Search Workout Routines}
+		\item{\textbf{test-BS-2}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and multiple workout routines are created.
+		
+		Input: Search string inputs to view the public workout routines.
+		
+		Output: Public workout routines that match the search criteria should be displayed. 
+		
+		Test Case Derivation: All workout routines that match a search, should be displayed.
+		
+		How test will be performed: By first adding multiple public test routines, then preforming a search, the routines that match the search criteria should be displayed.
+		
+		Requirement(s): R6
+		
+		\subsubsection{User Profile Tests}
+		\paragraph{Creating a User Profile}
+		\item{\textbf{test-UR-1}}
+		
+		Control: Manual
+		
+		Initial State: The application is running.
+		
+		Input: The required parameters for creating a profile.
+		
+		Output: The created profile is stored in a user database and the user should be logged into their profile.
+		
+		Test Case Derivation: On creating a profile the database must store the information. To go along with this the user must maintain the login status of the created profile.
+		
+		How test will be performed: On launching the application without a created profile a profile will be created. The database will then be checked to ensure the proper data matches.
+		
+		Requirement(s): R7
+		
+		\paragraph{Viewing Other User Profile}
+		\item{\textbf{test-UP-2}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and there exists another user profile.
+		
+		Input: Search criteria for the searched user profile.
+		
+		Output: A user profile is displayed with their public routines, fitness goals, and other public profile data.
+		
+		Test Case Derivation: On searching for another user the data shown should only be what is made public.
+		
+		How test will be performed: By creating a test-user profile then searching for it. The profile should display all public information and hide non-public information. 
+		
+		Requirement(s): R8
+		
+		\subsubsection{Fitness Goal Tests}
+		\paragraph{Creating a Fitness Goal}
+		\item{\textbf{test-FG-1}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and a profile has been created or is in the process of creation.
+		
+		Input: A string parameter for a fitness goal and publicity options for the goal.
+		
+		Output: The fitness goal for the user is now updated in the database and is saved under their profile.
+		
+		Test Case Derivation: The fitness goals are specific to a given user so the data for fitness goals are stored under their profile data.
+		
+		How test will be performed: A test user will add a fitness goal and check if it is displayed on their profile.
+		
+		Requirement(s): R9
+		
+		\paragraph{Progressing a Fitness Goal}
+		\item{\textbf{test-FG-2}}
+		
+		Control: Manual
+		
+		Initial State: The application is running and a fitness goal is created.
+		
+		Input: Progress points towards a given fitness goal at a given date.
+		
+		Output: The progress displayed towards a fitness goal should be visually updated and numerically updated in the database with a date.
+		
+		Test Case Derivation: The data for a fitness goal must be updated in the database for storage. To follow this, to goal must also be visually updated accordingly to signify progress towards the goal at the given date.
+		
+		How test will be performed: A test-user will create a fitness goal and add progress points towards the goal. There should be a database update and visual update to signify this change.
+		
+		Requirement(s): R10, R11
+		
 		
 	\end{enumerate}
 	
