added templates for nfr system requirements

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -503,13 +503,12 @@
 	\wss{Static tests, review, inspections, and walkthroughs, will not follow the
 		format for the tests given below.}
 	
-	\subsubsection{Area of Testing1}
+	\subsubsection{Look and Feel Testing}
 	
-	\paragraph{Title for Test}
 	
 	\begin{enumerate}
 		
-		\item{test-id1\\}
+		\item{\textbf{test-id-1}}: TEMPLATE
 		
 		Type: Functional, Dynamic, Manual, Static etc.
 		
@@ -521,24 +520,333 @@
 		
 		How test will be performed: 
 		
-		\item{test-id2\\}
+		Requirement(s):
+			
+		\item{\textbf{test-id-1}}: Style
+
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: The application is running.
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: This test will be preformed by conducting a survey to determine if test users think that the products appearance is minimal and straight forward.
+		
+		Requirement(s): NFR1
+		
+		
+
+	
+	\subsubsection{Usability and Humanity Tests}
+		\item{\textbf{test-id-1}}: Text Sizing and Visibility.
 		
 		Type: Functional, Dynamic, Manual, Static etc.
 		
 		Initial State: 
 		
-		Input: 
+		Input/Condition: 
 		
-		Output: 
+		Output/Result: 
 		
 		How test will be performed: 
 		
+		Requirement(s): NFR2
+		
+		\item{\textbf{test-id-1}}: Text Language.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR3
+		
+		\item{\textbf{test-id-1}}: Learnability.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR4
+		
+		\item{\textbf{test-id-1}}: Understandability.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR5
+		
+		\item{\textbf{test-id-1}}: Hearing and Audio considerations.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR6
+		
+		\item{\textbf{test-id-1}}: Use of Colour and Contrast.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR7
+	\subsubsection{Performance Tests}
+		\item{\textbf{test-id-1}}: Speed and Latency.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR8
+		
+		\item{\textbf{test-id-1}}: Accuracy and Precision of Quantifiers.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR9
+		
+		\item{\textbf{test-id-1}}: Availability and Uptime
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR10
+		
+		\item{\textbf{test-id-1}}: User Capacity.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR11
+		
+		\item{\textbf{test-id-1}}: Scalability of User Capacity.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR12
+	\subsubsection{Operational and Environment Tests}
+		\item{\textbf{test-id-1}}: Supported Systems.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR13
+	\subsubsection{Maintainability and Support Tests}
+		\item{\textbf{test-id-1}}: Maintenance.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR14
+	\subsubsection{Security Tests}
+		\item{\textbf{test-id-1}}: Private and Public Details.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR15
+		
+		\item{\textbf{test-id-1}}: Passwords.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR16
+		
+		\item{\textbf{test-id-1}}: Client Server Privacy.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR17
+		
+		\item{\textbf{test-id-1}}: Data storage.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR18
+		
+		\item{\textbf{test-id-1}}: Data Backups.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR18
+	\subsubsection{Cultural Requirements Tests}
+		\item{\textbf{test-id-1}}: Profanity and Inappropriate Language.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR19
+		
+		\item{\textbf{test-id-1}}: Reporting Offensive Language.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s): NFR20
+	\subsubsection{Legal Requirements Tests}
+		\item{\textbf{test-id-1}}: Age and Gender Use.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s):NFR21
+		\item{\textbf{test-id-1}}: Data Protection.
+		
+		Type: Functional, Dynamic, Manual, Static etc.
+		
+		Initial State: 
+		
+		Input/Condition: 
+		
+		Output/Result: 
+		
+		How test will be performed: 
+		
+		Requirement(s):NFR22
 	\end{enumerate}
-	
-	\subsubsection{Area of Testing2}
-	
-	...
-	
 	\subsection{Traceability Between Test Cases and Requirements}
 	
 	\wss{Provide a table that shows which test cases are supporting which
