--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -77,25 +77,45 @@
 	
 	\subsection{Summary}
 	
-	\wss{Say what software is being tested.  Give its name and a brief overview of
-		its general functions.}
+	%\wss{Say what software is being tested.  Give its name and a brief overview of
+	%	its general functions.}
+	
+	The software being tested is a mobile application called Olympian. It is a workout application with a social component.
+	Important components of the software that will be getting tested are:
+
+	\begin{itemize}
+		\item The functionality to log in and sign up new users. This will function to allow users to create a customized experience with data being saved over between uses.
+		\item The functionality for users to create and upload their own workouts. Specifically, users should be able to set a workout category, outline steps for their workout plan, and include videos and images to support the exercise.
+		\item The functionality for users to discover new and popular workouts that have been created by other users. Users should be able to sort by new or trending and filter by the muscle groups that they would like to target.
+	\end{itemize}
 	
 	\subsection{Objectives}
 	
-	\wss{State what is intended to be accomplished.  The objective will be around
-		the qualities that are most important for your project.  You might have
-		something like: ``build confidence in the software correctness,''
-		``demonstrate adequate usability.'' etc.  You won't list all of the qualities,
-		just those that are most important.}
-	
+	%\wss{State what is intended to be accomplished.  The objective will be around
+	%	the qualities that are most important for your project.  You might have
+	%	something like: ``build confidence in the software correctness,''
+	%	``demonstrate adequate usability.'' etc.  You won't list all of the qualities,
+	%	just those that are most important.}
+
+		\begin{itemize}
+			\item Demonstrate ease of use for new users to sign in.
+			\item Show off intuitiveness and learnability of the workout creation process.
+			\item Demonstrate usability of workout feed. Newly created workouts must appear in this feed.
+			\item Support the claim that our client shall update the server and vice versa in under 10 seconds under average North American internet speeds.
+		\end{itemize}
+
 	\subsection{Relevant Documentation}
 	
-	\wss{Reference relevant documentation.  This will definitely include your SRS
-		and your other project documents (design documents, like MG, MIS, etc).  You
-		can include these even before they are written, since by the time the project
-		is done, they will be written.}
+	%\wss{Reference relevant documentation.  This will definitely include your SRS
+	%	and your other project documents (design documents, like MG, MIS, etc).  You
+	%	can include these even before they are written, since by the time the project
+	%	is done, they will be written.}
 	
 	\citet{SRS}
+	\newline
+	\citet{MIS}
+	\newline
+	\citet{MG}
 	
 	\section{Plan}
 
