--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -621,15 +621,15 @@
 		
 		\item{\textbf{test-id-1}}: Text Language.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application is running.
 		
-		Input/Condition: 
+		Input/Condition: User click input of lanauge from dropdown menu.
+
+		Output/Result: Language of the application changes to ther users chosen language.
 		
-		Output/Result: 
-		
-		How test will be performed: 
+		How test will be performed: Language dropdown will ba manually pressed and a language will be chosen. The application should change all text to the new selected language.
 		
 		Requirement(s): NFR3
 		
@@ -650,7 +650,7 @@
 		\item{\textbf{test-id-1}}: Understandability.
 		
 		Type: Functional, Dynamic, Manual, Static etc.
-		
+
 		Initial State: 
 		
 		Input/Condition: 
@@ -691,29 +691,29 @@
 	\subsubsection{Performance Tests}
 		\item{\textbf{test-id-1}}: Speed and Latency.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Dynamic
 		
-		Initial State: 
+		Initial State: Application will be running.
 		
-		Input/Condition: 
+		Input/Condition: String representing workout name and workout information.
 		
-		Output/Result: 
+		Output/Result: Inputted information updated existing program or new program created and displayed.
 		
-		How test will be performed: 
+		How test will be performed: Program will be inputted and updated utilizing a testing framework that will time whether starting to completion took 10 seconds or less. 
 		
 		Requirement(s): NFR8
 		
 		\item{\textbf{test-id-1}}: Accuracy and Precision of Quantifiers.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application will be running and on the post search page.
 		
-		Input/Condition: 
+		Input/Condition: Search string inputs to view public posts.
 		
-		Output/Result: 
+		Output/Result: Search results with ratings at an accuracy of 2 decimal places.
 		
-		How test will be performed: 
+		How test will be performed: A string will be used to search public posts and all posts will be checked for two decimal places.
 		
 		Requirement(s): NFR9
 		
@@ -789,15 +789,15 @@
 	\subsubsection{Security Tests}
 		\item{\textbf{test-id-1}}: Private and Public Details.
 		
-		Type: Functional, Dynamic, Manual, Static etc.
+		Type: Manual
 		
-		Initial State: 
+		Initial State: The application will be running and logged into a user profile. 
 		
-		Input/Condition: 
+		Input/Condition: Navigate to public user profiles.
 		
-		Output/Result: 
+		Output/Result: Other users profiles should not display any private details such as their passwords or email information. 
 		
-		How test will be performed: 
+		How test will be performed: Search for other user profiles and verify that no private information is being displayed on their profile to other users.
 		
 		Requirement(s): NFR15
 		
